[package]
name = "options-math"
description = "Package for performing various mathematical operations on options."
license = "MIT"
version = "0.1.0"
authors = ["Ian Macalinao <me@ian.pw>"]
edition = "2018"
homepage = "https://cvix.info"
readme = "README.md"
repository = "https://github.com/macalinao/options-math/"

[dependencies]
chrono = "0.4"
derive-new = "0.5"
itertools = "0.9"

[dev-dependencies]
csv = "1.1.3"
serde = { version = "1", features = ["derive"] }
